@@ -24,7 +24,7 @@ cd /opt/app
 echo '授权当前用户'
 chmod 555 ./*.jar
 echo '执行....'
-nohup ${JAVA_HOME}/bin/java -Xms500m -Xmx1024m --enable-preview -XX:+UseZGC \
+nohup ${JAVA_HOME}/bin/java -Xms500m -Xmx1024m --enable-preview -XX:+UseZGC -XX:+ZGenerational \
   -Dkotlinx.coroutines.debug -XX:+UnlockExperimentalVMOptions -XX:+UseJVMCICompiler \
   -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 \
   -jar valentine-starter.jar >elog.out 2>&1 &
